Added references to missing bundles and factored out common bundles for GDS tests
git-svn-id: http://source.gemini.edu/software/giapi/giapi-osgi/trunk@35138 ee6ba543-07f8-4773-b02c-01d50e9d00ba